--- a/src/assets/css/components.scss
+++ b/src/assets/css/components.scss
@@ -1,6 +1,27 @@
+.blockContentHeader{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
 .options-header-content{
     display: flex;
+    width: 100%;
+    justify-content: flex-end;
 }
+
+@media (max-width: 639px) {
+    .blockContentHeader {
+      flex-direction: column;
+    }
+    .options-header-content{
+        justify-content: flex-start;
+        margin-top: 10px;
+    }
+   
+  }
 
 .mini-chart-card{
     border-radius: 10px;
