--- a/src/assets/css/header.scss
+++ b/src/assets/css/header.scss
@@ -98,6 +98,7 @@
 
 .home-toolbar2{
     box-shadow: 0px 1px 0px 0px rgba(108, 140, 171, 0.150000006);
+    background-color: #FFFFFF;
 }
 
 .home-toolbar2 ul li{
