--- a/src/assets/css/components.scss
+++ b/src/assets/css/components.scss
@@ -132,3 +132,142 @@
     
     margin-right: 10px;
   }
+
+  .tableDashboard table th{
+    color: var(--dl-color-default-text);
+    font-size: 14px;
+    font-style: Medium;
+    font-family: IBM Plex Sans;
+    font-weight: 500;
+    line-height: 20px;
+    font-stretch: normal;
+    text-decoration: none;
+  }
+
+  .tableDashboard table td{
+    color: var(--dl-color-default-text);
+    font-size: 14px;
+    align-self: auto;
+    font-style: Regular;
+    font-family: IBM Plex Sans;
+    font-weight: 400;
+    line-height: 139.9999976158142%;
+    font-stretch: normal;
+    text-decoration: none;
+  }
+.user-profile-avatar{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+.avatar-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .avatar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background-color: #E9EBF8;
+    font-size: 36px;
+    font-weight: bold;
+    color: #fff;
+    position: relative;
+  }
+  .avatar span{
+    color: #6400FF;
+    font-size: 80px;
+    font-style: normal;
+    font-family: Inter;
+    font-stretch: normal;
+    font-weight: 400;
+  }
+  .user-profile-avatar h1{
+    color: rgba(40, 42, 48, 1);
+    font-size: 24px;
+    align-self: auto;
+    font-style: Bold;
+    text-align: center;
+    font-family: IBM Plex Sans;
+    font-weight: 700;
+    line-height: 139.9999976158142%;
+    font-stretch: normal;
+    text-decoration: none;
+  }
+  .user-profile-avatar h4{
+    color: var(--dl-color-default-greytext);
+    font-size: 20px;
+    align-self: auto;
+    font-style: Medium;
+    text-align: center;
+    font-family: IBM Plex Sans;
+    font-weight: 500;
+    line-height: 139.9999976158142%;
+    font-stretch: normal;
+    text-decoration: none
+  }
+  
+  .home-edit {
+    position: absolute;
+    bottom: 20px;
+    right: 30px;
+    transform: translate(50%, 50%);
+    background-color: rgb(102, 90, 235);
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: solid 1px white;
+  }
+  
+  .home-pencilfill {
+    width: 16px;
+    height: 16px;
+  }
+
+  .user-profile-navigation ul li a{
+    display: flex;
+    padding: 16px;
+    overflow: hidden;
+    align-items: center;
+    border-color: transparent;
+    border-radius: 8px;
+    margin-top: 20px;
+    background-color: rgba(255, 255, 255, 1);
+      }
+.user-profile-navigation ul li a img {
+    width: 24px;
+    height: 24px;
+    position: relative;
+    margin-right: 16px;
+}
+.user-profile-navigation ul li a.active {
+    background-color: rgba(247, 247, 254, 1);
+}
+.user-profile-navigation ul li a:hover {
+    background-color: rgba(247, 247, 254, 1);
+}
+
+.user-profile-navigation ul li a span {
+    color: var(--dl-color-default-text);
+    font-size: 16px;
+    align-self: auto;
+    font-style: Medium;
+    text-align: left;
+    font-family: IBM Plex Sans;
+    font-weight: 500;
+    line-height: 20px;
+    font-stretch: normal;
+    margin-right: 0;
+    margin-bottom: 0;
+    text-decoration: none;
+
+}
