--- a/src/assets/css/components.scss
+++ b/src/assets/css/components.scss
@@ -242,6 +242,7 @@
     border-radius: 8px;
     margin-top: 20px;
     background-color: rgba(255, 255, 255, 1);
+    cursor: pointer;
       }
 .user-profile-navigation ul li a img {
     width: 24px;
