--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -4,6 +4,7 @@
 @import 'textos';
 @import 'buttons';
 @import 'components';
+@import 'pages';
 :root {
     --dl-color-gray-500: #595959;
     --dl-color-gray-700: #999999;
