--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -5,6 +5,7 @@
 @import 'buttons';
 @import 'components';
 @import 'pages';
+@import 'modals';
 :root {
     --dl-color-gray-500: #595959;
     --dl-color-gray-700: #999999;
