--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -6,6 +6,7 @@
 @import 'components';
 @import 'pages';
 @import 'modals';
+@import 'transitions';
 :root {
     --dl-color-gray-500: #595959;
     --dl-color-gray-700: #999999;
