--- a/src/assets/css/components.scss
+++ b/src/assets/css/components.scss
@@ -394,3 +394,8 @@ max-width: initial;
   justify-content: center;
   margin-right: 10px;
 }
+.processorSiteLoop{
+  border-bottom: solid 1px;
+  border-color: rgb(227, 232, 238);
+  margin-bottom: 20px;
+}
